--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bracketSpacing": false
   },
   "dependencies": {
-    "p5": "^1.1.9"
+    "p5": "^1.1.9",
+    "quicksettings": "^3.0.1"
   }
 }
